--- a/front_walleps/pubspec.yaml
+++ b/front_walleps/pubspec.yaml
@@ -30,13 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.3 # Asegúrate de usar la versión más reciente compatible
-
+  http: ^0.13.3
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
