--- a/front_walleps/pubspec.yaml
+++ b/front_walleps/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.3
+  fl_chart: ^0.40.0 # Verifica la última versión en pub.dev
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -54,6 +55,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - lib/assets/grafic.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
